@@ -1,3 +1,8 @@
+2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* support/devel/all.tcl: Small comments added to clarify the
+	  operation of the cleanup hook, and a tiny bit of code cleanup.
+
 2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
